--- a/kernfields_through_time.Rmd
+++ b/kernfields_through_time.Rmd
@@ -94,26 +94,41 @@ This thread could potentially improve workflow https://github.com/mbloch/mapshap
 
 ```{r}
 #read in data from mapshaper outputs
-mosaic <- read_sf("data/mapshaper_outputs/1997-2021kernfields/1997-2021kernfields.shp")
+mosaic <- read_sf("data/mapshaper_outputs/1997-2021kernfields/1997-2021kernfields.shp") 
 
 #drop polys under one acre and clean
 mosaic_drop_acre <- mosaic %>%
-  mutate(area_sq_ft = st_area(.)) %>% 
-  filter(area_sq_ft >= units::set_units(43560,"ft^2")) %>% 
+  mutate(area = st_area(.)) %>% 
+  filter(area >= units::set_units(43560,"ft^2")) %>% 
   st_transform(crs = "+proj=aea +lat_1=29.5 +lat_2=45.5 +lat_0=23 +lon_0=-96 +x_0=0 +y_0=0 +ellps=GRS80 +towgs84=0,0,0,0,0,0,0 +units=m +no_defs") %>% 
   st_make_valid()
 
 #negative buffer and intersect with field data
-kernfield_join <- st_intersection(st_buffer(mosaic_drop_acre, dist = -1), kernfield_clean, left = T)
+kernfield_join <- st_intersection(st_buffer(mosaic_drop_acre, dist = -1), kernfield_clean)
 
 #pivot so each column is a year
-kernfield_pivot <- kernfield_join %>% 
+kernfield_pivot <- kernfield_join %>%
+  filter(!is.na(pmt_site_string)) %>% 
   separate(pmt_site_string, into = c("year", "pmt_site"), sep = "_") %>% 
-  select(-c(FID, area_sq_ft)) %>% 
+  select(-c(FID, area)) %>% 
   pivot_wider(names_from = year, values_from = pmt_site) %>%
   st_sf() %>% 
   st_buffer(dist = 1)
 
+#making a df without pmt_sites for export to explore
+kernfield_pivot_over_acre <- kernfield_pivot %>%
+  mutate(area = st_area(.)) %>% 
+  filter(area >= units::set_units(1,"acre"))
+
 #write to csv
-write_csv(kernfield_pivot, "data/shapefiles_written/1997-2021_pivoted.csv")
+write_csv(kernfield_pivot_over_acre, "data/shapefiles_written/1997-2021_pivoted.csv")
+
+#write to shapefile
+st_write(kernfield_pivot_test_shp, "data/shapefiles_written/1997-2021_pivoted.shp", driver = "ESRI Shapefile")
 ```
+
+
+```{r}
+
+```
+
